[gd_scene load_steps=4 format=3 uid="uid://8y0lkj3thnau"]

[ext_resource type="PackedScene" uid="uid://mm7endc3mrl0" path="res://scenes/screens/base_screen.tscn" id="1_1n2bf"]
[ext_resource type="Script" uid="uid://bi5d4phdypcno" path="res://scripts/screens/opcoes_screen.gd" id="2_2atps"]
[ext_resource type="FontFile" uid="uid://dfsodyg8fh8i3" path="res://assets/fonts/PixelOperator8.ttf" id="3_7xddr"]

[node name="OpcoesScreen" instance=ExtResource("1_1n2bf")]
script = ExtResource("2_2atps")

[node name="Gatinho1" type="Label" parent="." index="1"]
layout_mode = 0
offset_left = 101.0
offset_top = 590.0
offset_right = 301.0
offset_bottom = 622.0
theme_override_fonts/font = ExtResource("3_7xddr")
theme_override_font_sizes/font_size = 24
text = "Gatinho 1"

[node name="Gatinho2" type="Label" parent="." index="2"]
layout_mode = 0
offset_left = 873.0
offset_top = 592.0
offset_right = 1073.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("3_7xddr")
theme_override_font_sizes/font_size = 24
text = "Gatinho 2"

[node name="Title" parent="MarginContainer/HBoxContainer/VBoxContainer" index="0"]
text = "Selecione"

[node name="HSeparator2" parent="MarginContainer/HBoxContainer/VBoxContainer" index="1"]
theme_override_constants/separation = 360

[node name="Button1" parent="MarginContainer/HBoxContainer/VBoxContainer" index="2"]
text = "Continuar"

[node name="Button2" parent="MarginContainer/HBoxContainer/VBoxContainer" index="3"]
text = "Menu"

[node name="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer" index="4"]
theme_override_constants/separation = 25

[node name="Opcoes" type="MarginContainer" parent="." index="4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Opcoes" index="0"]
layout_mode = 2
theme_override_constants/separation = 700

[node name="OpcoesJogador1" type="GridContainer" parent="Opcoes/HBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50

[node name="OpcoesJogador2" type="GridContainer" parent="Opcoes/HBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
